jellykube/traefik.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: jellykube-test
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    env: prod
    app: jellykube-test
    owner: lpil
spec:
  rules:
  - host: jellykube.lpil.uk
    http:
      paths:
      - backend:
          serviceName: jellykube-test
          servicePort: 80

---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: jellykube-test
  labels:
    env: prod
    app: jellykube-test
    owner: lpil
spec:
  selector:
    env: prod
    app: jellykube-test
    role: webserver
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: jellykube-test
  labels:
    env: prod
    app: jellykube-test
    owner: lpil
spec:
  replicas: 1 # We always want one instance of this stateful service
  selector:
    matchLabels:
      env: prod
      app: jellykube-test
      role: webserver
  template:
    metadata:
      namespace: default
      name: jellykube-test
      labels:
        env: prod
        app: jellykube-test
        role: webserver
        owner: lpil
    spec:
      containers:
      - name: jellykube-test
        image: gcr.io/kuar-demo/kuard-amd64:blue
        ports:
        - containerPort: 8080
